--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="checkbox" id="check">
             <label for="check" id="open">☰</label>
             <ul id="content">
-                <li><label for="check" id="close">☰ Close</label></li>
+                <li><label for="check" id="close">🗙 Close</label></li>
                 <li><a href="#">Weekly Recommendations</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#">TDB</a></li>
